feat: remove invite mapper